# WolfkryptHostPython

./: .gitignore  README.md  logs  pyproject.toml
.github/workflows/: ci.yml
keys/: private.pem
scripts/: build.sh  usb_debug.py
src/: __init__.py  main.py
src/core/: __init__.py  aoa.py  auth.py  dropping_queue.py  frame_queue.py  pipeline.py  protocol.py  stream_bridge.py
src/media/: __init__.py  audio.py  pyav_decoder.py  video.py
src/render/: __init__.py  audio_output.py  ffplay_bridge.py  ffplay_video.py  mpv_bridge.py  sdl_video.py  window.py
src/ui/: __init__.py  main_window.py
tests/unit/: test_core.py
